--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -8,6 +8,19 @@
         <title>JS starter</title>
     </head>
     <body>
-       <script type="module" src="./src/index.js"></script>
+        <div class="search-container">
+            <span id="search-icon">&#128269;</span>
+            <input
+                class="search-bar"
+                type="text"
+                placeholder="Search a movie"
+            />
+        </div>
+        <div class="movies-container">
+            <div class="movie-card">
+                <h6></h6>
+            </div>
+        </div>
+        <script type="module" src="./src/index.js"></script>
     </body>
 </html>
