--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
         <div class="search-container">
             <span id="search-icon">&#128269;</span>
             <input
+                id="search-bar"
                 class="search-bar"
                 type="text"
                 placeholder="Search a movie"
             />
         </div>
-        <div class="movies-container">
-            <div class="movie-card">
-                <h6></h6>
-            </div>
-        </div>
+        <div id="movies-container" class="movies-container"></div>
         <script type="module" src="./src/index.js"></script>
     </body>
 </html>
